# nsc_arbiter

./: README.md
nsc_arbiter_core/: Cargo.toml
nsc_arbiter_core/src/: cfg.rs  decide.rs  evidence.rs  freeze.rs  lib.rs  oddity.rs  sources.rs  state.rs
nsc_arbiter_core/tests/: arbiter_core.rs
nsc_arbiter_ffi/: Cargo.toml
nsc_arbiter_ffi/include/: nsc_arbiter.h
nsc_arbiter_ffi/src/: lib.rs
nsc_arbiter_ffi/tests/: ffi_smoke.rs
nsc_arbiter_supervisor/: Cargo.toml
nsc_arbiter_supervisor/src/: adapter.rs  lib.rs  supervisor.rs
